
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2016-10-22 niel
	Fix: Amazon settings not having full section included.
2016-10-21 niel
	Mrg: Brought in dev-move-to-settings-model branch. This is expected to cause problems as we
		iron out the final wrinkles. Indexing side should mostly be fine as it was previously
		merged some time ago. The web side is where we expect most problems to occur. Please keep
		an eye on your logs and let us know of *any* problems showing up.
	Fix: Correct typo causing maxmusicprocessed setting lookup to fail.
	Fix: Add sql patch to ensure the indexer, ppa, innerfileblacklist setting exists.
2016-10-21 DariusIII
	Chg: Add option for admins to delete topics in forum
2016-10-20 DariusIII
	Fix: User and role category exclusions (fixes issue #2290)
2016-10-19 niel
	Chg: Remove the yEnc initialising code as it is not needed any longer.
2016-10-18 DariusIII
	Fix: Segfaults in PPA caused by broken sample images (fixes issue #2278)
2016-10-17 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.6.5.3


2016-10-16 niel
	Fix: Added creation of nZEDb_INSTALLER constant to the .../www/install/index.php tp prevent
		problems caused by prematurely loading .../nzedb/bootstrap.php. Fixes issue 2291.
2016-10-15 niel
	Chg: Removed zeebinz/rarinfo library from our code (.../libs/zeebinz/rarinfo) to use the
		upstream version now it includes a composer configuration.
	Fix: Revert over-zealous changes that would break functionality of delete_releases.php script
		(Fixes issue 2277).
2016-10-14 DariusIII
	Fix: Remove semicolon in mysql-ddl.sql where it should not be in role_excluded_categories unique index row (fixes issue #2287)